# a2ia

./: .gitignore  .gitmodules  A2IA-Chronicle.md  A2IA-Continuum.md  A2IA.md  BUSINESSMAP_INTEGRATION.md  CAPYBARA_INTEGRATION.md  CLAUDE.md  CLI_BUG_FIXES.md  CLI_E4P2_STATUS.md  CLI_REACT_IMPLEMENTATION.md  CLI_STATUS.md  CLI_STREAMING_UPDATE.md  CLI_TOOL_VALIDATION.md  CLI_UX_IMPROVEMENTS.md  E4P2_SESSION_SUMMARY.md  KNOWN_ISSUES.md  MCP_INTEGRATION_GUIDE.md  Makefile  Modelfile  Modelfile-capybara  Modelfile-gguf  Modelfile-gpt-oss  Modelfile-mistral  Modelfile-qwen  Modelfile-qwen3  NEWPROMPT.md  PROMPT.md  REACT_PROMPT.md  RELEASE_v0.2.0.md  STATUS.md  TOOL_SCHEMA_GENERATION.md  a2ia.code-workspace  check_models.sh  debug_ollama_tools.py  diagnose_capybara.py  empty.txt  get_weather.py  gpt-oss-original.modelfile  mcp_config_example.json  (+15 more)
a2ia/: __init__.py  core.py  http_server.py  mcp_server.py  rest_server.py  rest_server.py.new  server.py  workspace.py
docs/: A2IA-Chronicle.md  A2IA-Codex.md  CLI_COMPLETE.md  CLI_HISTORY.md  CLI_INTERRUPT_FIX.md  CLI_KEYBOARD_CONTROLS.md  CLI_README.md  FILESYSTEM_PATH_FIX_SUMMARY.md  FILE_INDEXING_GUIDE.md  FILE_INDEXING_SUMMARY.md  FIX_OOM_ERROR.md  MISTRAL_MODELFILE.md  MODELS_REFERENCE.md  MODEL_TUNING_NOTES.md  MULTI_HUNK_DIFF_TEST.md  PATCH_FILE_CROSS_DEVICE_FIX.md  PROMPT2.md  README.md  RESTART.md  START_VLLM_NOW.md  TEST_IMPROVEMENTS_SUMMARY.md  USE_OLLAMA.md  VLLM_INTEGRATION_SUMMARY.md  VLLM_OOM_SOLUTIONS.md  VLLM_POSTMORTEM.md  VLLM_QUICKSTART.md  VLLM_README.md  WORKSPACE_PATH_FIX.md
memory/: chroma.sqlite3
memory_backup/: chroma.sqlite3
scripts/: README.md  check_vllm.sh  create_capybara_model.sh  create_mistral_model.sh  create_qwen3_model.sh  create_qwen_model.sh  generate_tool_schema.py  show_tool_structure.py  test_mistral_connection.sh  vllm_mistral7b.sh  vllm_mistral7b_cpu_offload.sh  vllm_mistral7b_minimal.sh  vllm_mixtral_awq.sh  vllm_setup.sh  vllm_start.sh  vllm_tiny.sh
tests/: __init__.py  conftest.py  test_all_filesystem_path_bugs.py  test_businessmap.py  (+25 more)
(+27 files in other folders)
